Better way to track state changes, simpler

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Canvas Sketch</title>
-  </head>
-  <body>
-    <canvas id="render-canvas" />
-    <script type="module" src="/main.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Canvas Sketch</title>
+    </head>
+    <body>
+        https://webgl2fundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
+
+        <canvas id="render-canvas"> Canvas not supported on your browser :( </canvas>
+        <script type="module" src="/main.js"></script>
+    </body>
 </html>
